# runbook-forge

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-cloudflare-pages.yml
fixtures/aws/: ecs_failed_deploy.json  sqs_lambda_backlog.json
fixtures/github_actions/: deploy_failure.json
fixtures/terraform/: plan_public_s3.json
integrations/hermes/: README.md
integrations/hermes/skills/: ecs_deploy_failure_triage.md  sqs_lambda_backlog_triage.md  terraform_plan_review.md
reports/: ecs-triage.md  sqs-lambda-triage.md  terraform-review.md
runbooks/: ecs_deploy_failure_triage.md
sales-page/: README.md  app.js  index.html  styles.css
src/runbook_forge/: __init__.py  cli.py  models.py
src/runbook_forge/analysis/: __init__.py  classifier.py  pattern_memory.py  report_writer.py  risk_engine.py  skill_generator.py
src/runbook_forge/evidence/: __init__.py  aws_cloudwatch.py  aws_ecs.py  aws_sqs_lambda.py  github_actions.py  repo_docs.py  terraform_plan.py
src/runbook_forge/safety/: __init__.py  approval_gate.py  audit_log.py  redaction.py
tests/: test_cli.py  test_ecs_classifier.py  test_pattern_memory.py  test_redaction.py  test_skill_generation.py  test_sqs_lambda_classifier.py  test_terraform_plan.py
