[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runbook-forge"
version = "0.1.0"
description = "A recommend-only CloudOps agent that turns repeated incidents into reusable runbook skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Runbook Forge Demo" }]
dependencies = [
  "pydantic>=2.6,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
aws = ["boto3>=1.34,<2"]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[project.scripts]
runbook-forge = "runbook_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/runbook_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
packages = ["runbook_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
